# mavlink-ping

./: .gitignore  CMakeLists.txt  README.md  main.c
scripts/mavlink-ping-server/: mavlink-ping-server.py
